frontend/src/styles/index.scss
@use "./reset.scss";
@use "./fonts.scss";
@use "./code.scss";
@use "./theme.scss";
@use "./animation.scss" as *;
@use "./util.scss" as *;

@use "./media.scss";

:root {
	font: 16px/1.3 var(--font-default);
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	color: $fg-100;
	background-color: $bg-100;
}

::selection {
	background-color: #3fa9c988;
}

#root {
	display: grid;
	grid-template-areas:
		"nav2 nav header header" "nav2 nav main sidebar" "footer footer footer footer";
	grid-template-rows: auto 1fr auto;
	grid-template-columns: auto auto 1fr auto;
	height: 100vh;
	background-color: $bg-200;
	color: $fg-200;
}

#root > nav {
	grid-area: nav;
	width: 16rem;
	background-color: $bg-150;
	color: $fg-200;
	overflow-y: auto;
	display: flex;
	flex-direction: column;

	& > ul {
		padding: 0.25rem;
		display: flex;
		flex-direction: column;
	}

	& li {
		margin-top: 0.025rem;
	}

	& a {
		display: block;
		width: 100%;
		padding: 2px 4px;
		background-color: none;
		text-decoration: none;
		color: $fg-400;

		&.active {
			background-color: $bg-300;
		}

		&:hover,
		&:focus {
			background-color: $bg-400;
		}

		&.closed {
			color: $sep-500;
		}

		&.unread {
			font-weight: bold;
			color: $fg-200;
		}
	}

	& li > ul {
		margin-left: 1.5rem;
	}
}

button,
input[type="submit"] {
	padding: 0 0.25rem;
	background-color: $bg-300;
	cursor: pointer;

	&:hover,
	&:focus {
		background-color: $bg-400;
	}
}

.home {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	padding: 1rem;
	overflow-y: auto;

	& button {
		margin: 2px 0;
	}
}

.room-home {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	padding: 1rem;
	overflow-y: auto;

	& .thread {
		contain: content;
		background-color: $bg-300;
		margin: 8px 0;
		border: solid 1px $sep-500;
		max-width: 800px;

		& > header {
			display: flex;
			flex-direction: column;
			padding: 4px 8px;
			cursor: pointer;
			border-bottom: solid 1px $sep-500;

			& > .top {
				display: flex;
				align-items: center;
				gap: 8px;

				& > .icon {
					background-color: $bg-400;
					height: 16px;
					width: 16px;
					border-radius: 50%;
				}

				& > .spacer {
					@include truncate;
					flex: 1;
				}

				/* TODO: use actual <time> */
				& > .time {
					color: $fg-300;
				}
			}
		}

		& > .preview > details {
			padding: 0.25rem;
			cursor: pointer;
			appearance: details;
		}

		& > footer {
			cursor: pointer;
			text-align: center;
		}
	}
}

.chat {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	display: grid;
	grid-template-rows: 1fr auto;
	contain: strict;
	scrollbar-color: $bg-300 $bg-150;
	scrollbar-gutter: stable;

	& > .input {
		width: 100%;
		min-height: 100%;
		background-image: linear-gradient(to top, $bg-200 25%, transparent);
		display: flex;
		flex-direction: column;
		padding: 4px;
		max-height: 50%;

		& > .typing {
			background: $bg-300;
			padding: 0 4px;
		}

		& > .reply {
			display: flex;

			& > .info {
				padding: 0 4px;
				background-color: oklch(var(--color-bg1) / 0.8);
				flex: 1;
				border: solid 1px $sep-500;
			}

			& > .cancel {
				width: 124px;
				border: solid 1px $sep-500;
				background-color: $bg-200;
			}
		}

		& > .attachments {
			padding-left: 124px;
		}

		& > .text {
			display: flex;

			& > .upload {
				width: 124px;
				padding: 4px;
				background: $bg-300;
				border: solid $bg-400 1px;
				cursor: pointer;

				&:hover {
					background: $bg-200;
				}

				& > input[type="file"] {
					display: none;
				}
			}

			& > .editor {
				flex: 1;
				box-shadow: 2px 2px 8px #1114;
			}
		}
	}

	& > .list {
		display: flex;
		flex-direction: column;
		overflow-y: auto;

		& > .header > header {
			grid-column: span 3;
			position: sticky;
			z-index: 1;
			top: 0;
			padding: 0 144px;
			background-color: $bg-300;
			margin-bottom: 4px;
			box-shadow: 0 2px 8px $bg-200;
		}

		& > li {
			display: grid;
			grid-template-columns: 128px 1fr max-content;

			&.message {
				grid-template-columns: 1fr;
			}

			&:not(.message) {
				overflow-anchor: none;
			}

			&.unread-marker {
				color: #3fa9c9;
				margin: 8px 0;

				& > .content {
					grid-column: 1 / 4;
					text-align: center;
					display: flex;
					align-items: center;

					&::before,
					&::after {
						content: "";
						display: block;
						background: #3fa9c9;
						height: 1px;
						flex: 1;
						margin: 0 8px;
					}
				}
			}

			&.selected {
				box-shadow: 4px 0 0 -1px inset #67dc82;
				background-color: #67dc8222;
			}

			&.context {
				box-shadow: 4px 0 0 -1px inset #cc1856;
				background-color: #cc185622;
			}

			&.header {
				display: contents;
			}
		}
	}

	& > .loading {
		position: absolute;
		top: 8px;
		left: 8px;
		padding: 8px;
		background: $bg-100;
		z-index: 100;
	}
}

.editor {
	background-color: $bg-300;
	flex: 1;
	border: solid 1px $sep-500;
	padding: 4px;
	white-space: pre-wrap;
	overflow-y: auto;

	&.disabled {
		background-color: $bg-400;
	}

	& .placeholder {
		position: absolute;
		color: $fg-400;
	}

	& .syn {
		color: $fg-500;
	}
}

h1 {
	font-size: 1.5rem;
}

h2 {
	font-size: 1.5rem;
}

h3 {
	font-size: 1.3rem;
}

b,
strong {
	font-weight: bold;
}

s {
	text-decoration: line-through;
}

li,
p {
	white-space: pre-wrap;
}

pre,
code {
	background-color: $bg-200;
	font-family: var(--font-mono);
}

pre {
	overflow-x: auto;
	padding: 4px;
	white-space: pre;
}

a {
	color: $link-500;
	cursor: pointer;

	&:hover {
		text-decoration: underline;
	}
}

.underline-links a {
	text-decoration: underline;
}

.select-all {
	user-select: all;
}

em {
	font-style: italic;
}

.markdown {
	white-space: collapse;

	li,
	p {
		white-space: pre-wrap;
	}

	& ul,
	ol {
		white-space: normal;

		& ul,
		ol {
			margin-left: 1rem;
		}
	}

	& li {
		list-style-position: inside;
	}

	& ul > li {
		list-style-type: disc;
	}

	& ol > li {
		list-style-type: numbered;
	}
}
/* ... */

